# fourinarow-bot

./: Cargo.toml  notify.sh  run_watcher.sh
src/: main.rs  player_bot.rs  watcher.rs
